# UniverseCore

./: .gitignore  LICENSE  README.md  build.gradle  gradle.properties  mod.hjson  settings.gradle
.github/workflows/: gradle-publish.yml  gradle.yml
.run/: UniverseCore [buildProject].run.xml
abstract/: build.gradle
android/: build.gradle
android/src/: Test.java
android26/: build.gradle
annotations/: build.gradle
annotest/: build.gradle
assets/bundles/: bundle_zh_CN.properties
assets/java/: PreloadLibMethodTemplate.java
classes/src/javassist/: ClassPool.java  CtField.java
core/: build.gradle
desktop/: build.gradle
desktop/src/: Main.java  Test.java
desktop/src/universeCore/: Test.java
desktop9/: build.gradle
dynamilizer/: build.gradle
graphics/: build.gradle
implabstract/: build.gradle
jniSources/: CMakeLists.txt  universeCore_nativeImpl_FieldHandlerImpl.cpp  universeCore_nativeImpl_FieldHandlerImpl.h
markdown/: build.gradle
mindustry/: build.gradle
scenes/: build.gradle
src/main/java/: AnnoTest.java
src/universeCore/: ModCore.java  Test.java  UncCore.java
src/universeCore/core/: EventsManager.java  UncEvents.java
src/universeCore/debugModules/: ObjectDataMonitor.java
src/universeCore/override/: UncMods.java
src/universeCore/util/: DataPackable.java  Empties.java  Functions.java  Ini.java  OverrideContentList.java  UncContentType.java  UncLiquidStack.java
src/universeCore/world/: Particle.java
src/universecore/: Test.java  UncCore.java
src/universecore/core/: EventsManager.java  (+1 more)
utilities/: build.gradle
(+670 files in other folders)
